# best-practices

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh  test.sh
.github/workflows/: ci.yml
backend/: Dockerfile  makefile  pyproject.toml
backend/app/: agent.py  main.py  mcp_client.py  schemas.py  state.py
backend/app/routers/: health.py  query.py  tools.py
frontend/: Dockerfile  app.py
mcp_server/: Dockerfile  Makefile  pyproject.toml  server.py
src/best_practices/: utils.py
tests/: test_utils.py
